<resources>
    <string name="app_name">ChatTest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="register">REGISTRAR</string>
    <string name="login">LOGIN</string>
    <string name="new_message">"Nova Mensagem"</string>
    <string name="profile">Perfil</string>
    <string name="sign_out">Sair</string>
    <string name="message">Escreva uma mensagem</string>
    <string name="Enviar">Enviar</string>
</resources>